--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,46 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vh;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.sideBar {
+    width: 25%;
+    }
+
+#search {
+  width: 100%;
+  height: 2rem;
+  font-size: 1rem;
+}
+
+.venueList {
+  padding: 1rem;
+}
+
+.listItem {
+  list-style: none;
+  font-size: 1rem;
+  padding: .5rem;
+  margin-top: 1rem;
+  cursor: pointer;
+  background: #057570;
+  color: white;
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 80px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +51,14 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App-title {
+  font-size: 1.5rem;
+}
+
+.App-intro {
+  font-size: large;
 }
 
 @keyframes App-logo-spin {
