Modified the files and need to fix the errors

--- a/src/App.css
+++ b/src/App.css
@@ -4,81 +4,250 @@
   width: 100vw;
   display: flex;
   flex-flow: row nowrap;
-  background-color:#262932b0
+  background-color: #262932b0
 }
 
-.sideBar {
-    width: 25%;
-     border: 1px solid #1e4277;
+body {
+  overflow: hidden;
 }
 
-#search, .foursquare {
+/* skip links deactivated until further implemntation */
+  .skip-links {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+  left: 5em;
+  background-color: #000;
+  color: #fff;
+  padding: 0.5em 0.75em;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.skip-links a:focus {
+  top: 0;
+  text-align: center;
+}
+
+body {
+  background: #00000080;
+}
+
+#title {
+  text-align: center;
+  /* background-image: url("images/drk-bg.png"); */
+  text-shadow: 4px 4px 2px rgb(12, 7, 7);
+}
+.map {
+  border:10px solid #0b0;
+  min-height:250px;
+  height:100%;
+  width: 100%;}
+
+a {
+  font-size: 1.4vw;
+}
+
+h1 {
+  margin: 0px;
+  font-family: cursive;
+  color: #c1cc2f;
+
+}
+
+h2 {
+  margin: 3px;
+}
+
+h3, #title, #search {
+  margin: 0 0 .83em 0;
+}
+
+h3 {
+  font-size: 1.5vw;
+}
+
+h4, ol.venueList {
+  margin: 0;
+}
+
+p {
+  margin: 3px;
+}
+
+/* searchbar flashing cursor */
+.cursor {
+  position: relative;
+}
+.cursor i {
+  position: absolute;
+  width: 1px;
+  height: 80%;
+  background-color: gray;
+  left: 5px;
+  top: 10%;
+  animation-name: blink;
+  animation-duration: 800ms;
+  animation-iteration-count: infinite;
+  opacity: 1;
+}
+
+.cursor input:focus + i {
+  display: none;
+}
+
+#search {
+  animation: blink 1s infinite;
+  animation-timing-function: cubic-bezier(0.9, -0.43, 0.77, 1.15);  
+}
+
+.info-pane h3, #search {
+  background: #92bfe6;
+  border: 1px solid gray;
+  text-align: center;
+  font-weight: 900;
+  font-size: 1.7vw;
+  color: #500000;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
+  padding: 4px 1px;
+  -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+}
+
+@keyframes blink {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+#search:focus, #search:hover {
+  background-color: #2eb9ce;
+  animation: step-end;
+}
+
+.foursquare,
+.info-pane h2, #title {
+  /* background:  linear-gradient(
+    rgba(128, 117, 117, 0.45), 
+    rgb(0, 0, 0)
+  ), url("images/drk-bg.png"); */
+  background-color: #2eb9ce38;
   text-align: center;
   font-weight: 900;
   font-size: 16px;
-  color: #f4f4f4;
-  background: #0000008f;
+  color: #d8cccc;
   width: 100%;
   border: 0;
   font-family: 'Lato', sans-serif;
-  padding: 8px 0;
-  -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0,0,0,0.75);
-  -moz-box-shadow: inset 10px 15px 21px -8px rgba(0,0,0,0.75);
-  box-shadow: inset 10px 15px 21px -8px rgba(0,0,0,0.75);
+  padding: 4px 1px;
+  -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
 }
 
-.venueList {
+.info-pane, .sideBar {
+  width: 25%;
+  border: 1px solid #1e4277;
+  overflow: hidden;
+}
+
+.venueList,
+.info-list {
   padding: 2px;
 }
 
-.listItem {
+.gm-style-iw h3 {
+  color: #2f4e4e;
+
+}
+
+.pane-data {
+  font-size: .5rem;
+  flex-flow: column;
+}
+
+.listItem, .pane-data {
   list-style: none;
   font-size: 1rem;
   padding: 1px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-  border-radius: 4px;
+  border-radius: 3px;
   font-family: cursive;
-  margin: 4px;
+  /* background-image: url("images/wht-bg.jpg"); */
+  margin: 4px 0;
   color: #2f4e4e;
   cursor: pointer;
-  border:3px solid #2eb9ce38;
+  border: 3px solid #2eb9ce38;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
-.listItem:hover {
-color: rgb(0, 199, 199);
-border:3px solid #2eb9ce;
+.listItem:hover,
+.pane-data:hover, 
+.listItem:focus,
+.pane-data:focus {
+  color: rgb(0, 199, 199);
+  border: 3px solid #2eb9ce;
 }
 
-li img {
+button img {
   background-color: #1e79696e;
   border-radius: 17px;
-   margin: 4px;
+  margin: 4px;
 }
 
-.App-header {
-  color: white;
+/* holds the width of the error frame. optimized for map placement then app  */
+.errFrame {
+  width: 50%;
+}
+
+.failMSG {
+  margin: 0px;
+  font-family: cursive;
+  color: #c1cc2f;
+}
+
+details {
+  color: #2eb9ce;
+}
+
+.info {
+  color: #c4cecf;
+}
+
+.info, details, .failMSG {
+  margin: 4px;
+  padding: 2px;
 }
 
 @media only screen and (max-width: 534px) {
-  .listItem {
-      flex-direction: column;
+
+  .listItem,
+  .pane-data {
+    flex-direction: column;
   }
 }
 
 @media only screen and (max-width: 976px) {
-  .listItem {
-      font-size: 2vw;
+  .listItem, h4, h3, p {
+    font-size: 2vw;
   }
 }
 
 @media only screen and (max-width: 976px) {
   .listItem img {
-      width: 3vw;
+    width: 3vw;
   }
 }
- @media only screen and (max-width: 534px) {
+
+@media only screen and (max-width: 534px) {
   .listItem img {
     width: 5vw;
   }
