--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,6 @@ body {
 
 #title {
   text-align: center;
-  /* background-image: url("images/drk-bg.png"); */
   text-shadow: 4px 4px 2px rgb(12, 7, 7);
 }
 .map {
@@ -106,7 +105,7 @@ p {
   animation-timing-function: cubic-bezier(0.9, -0.43, 0.77, 1.15);  
 }
 
-.info-pane h3, #search {
+.info-cards h3, #search {
   background: #92bfe6;
   border: 1px solid gray;
   text-align: center;
@@ -132,7 +131,7 @@ p {
 }
 
 .foursquare,
-.info-pane h2, #title {
+.info-cards h2, #title {
   /* background:  linear-gradient(
     rgba(128, 117, 117, 0.45), 
     rgb(0, 0, 0)
@@ -151,7 +150,7 @@ p {
   box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
 }
 
-.info-pane, .sideBar {
+.info-cards, .sideBar {
   width: 25%;
   border: 1px solid #1e4277;
   overflow: hidden;
