--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html,body {
 
 body {
   overflow: hidden;
-  
+  background: #5e35b1;
 }
 
 .App {
@@ -44,28 +44,26 @@ body {
   text-align: center;
 }
 
-body {
-  background: #00000080;
-}
 
-#title {
+/* #title {
   text-align: center;
   text-shadow: 4px 4px 2px rgb(12, 7, 7);
-}
+} */
 .map {
   border:10px solid #0b0;
   min-height:250px;
   height:100%;
-  width: 100%;}
+  width: 100%;
+}
 
 a {
   font-size: 1.4vw;
 }
 
 h1 {
-  margin: 0px;
-  font-family: cursive;
-  color: #c1cc2f;
+  /* margin: 0px; */
+  /* font-family: cursive; */
+  /* color: #c1cc2f; */
 
 }
 
@@ -73,7 +71,7 @@ h2 {
   margin: 3px;
 }
 
-h3, #title, #search {
+h3, #search {
   margin: 0 0 .83em 0;
 }
 
@@ -94,7 +92,8 @@ p {
   position: relative;
 }
 .cursor i {
-  position: absolute;
+  flex-direction: column;
+  /* position: absolute; */
   width: 1px;
   height: 80%;
   background-color: gray;
@@ -111,11 +110,11 @@ p {
 }
 
 #search {
-  animation: blink 1s infinite;
-  animation-timing-function: cubic-bezier(0.9, -0.43, 0.77, 1.15);  
+  /* animation: blink 1s infinite; */
+  /* animation-timing-function: cubic-bezier(0.9, -0.43, 0.77, 1.15);   */
 }
 
-.info-cards h3, #search {
+.info-cards h3 {
   background: #92bfe6;
   border: 1px solid gray;
   text-align: center;
@@ -130,18 +129,35 @@ p {
   box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
 }
 
+#search {
+  /* background: #92bfe6; */
+    border: 1px solid gray;
+  /* text-align: center; */
+  font-weight: 900;
+  font-size: 1.7vw;
+  color: #500000;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
+  padding: 4px 1px;
+  height: 75px;
+  padding-left: 20px;
+  /* -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75); */
+}
+
 @keyframes blink {
   from { opacity: 1; }
   to { opacity: 0; }
 }
 
 #search:focus, #search:hover {
-  background-color: #2eb9ce;
+  /* background-color: #2eb9ce; */
   animation: step-end;
 }
 
 .foursquare,
-.info-cards h2, #title {
+.info-cards h2 {
   /* background:  linear-gradient(
     rgba(128, 117, 117, 0.45), 
     rgb(0, 0, 0)
@@ -155,19 +171,63 @@ p {
   border: 0;
   font-family: 'Lato', sans-serif;
   padding: 4px 1px;
-  -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  /* -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
-  box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75); */
+}
+ #title {
+  /* background:  linear-gradient(
+    rgba(128, 117, 117, 0.45), 
+    rgb(0, 0, 0)
+  ), url("images/drk-bg.png"); */
+  /* background-color: #2eb9ce38; */
+   color: white;
+  text-align: center;
+  font-weight: 900;
+  font-size: 16px;
+  /* color: #d8cccc; */
+  width: 100%;
+  border: 0;
+  font-family: sans-serif;
+  padding: 4px 1px;
+  /* -webkit-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75); */
+  /* -moz-box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75); */
+  /* box-shadow: inset 10px 15px 21px -8px rgba(0, 0, 0, 0.75); */
+}
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
 }
 
-.info-cards, .sideBar {
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.sideBar{
+    display: flex;
+}
+
+.info-cards {
+
   width: 25%;
   border: 1px solid #1e4277;
-  overflow: hidden;
+  overflow: scroll;
+  margin-bottom: 50px;
+}
+
+.sideBar {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  border: 1px solid #1e4277;
+  /* overflow: scroll; */
 }
 
 .venueList,
 .info-list {
+  overflow: scroll;
   padding: 2px;
 }
 
